# zenblen-assessment

./: Cargo.toml  README.md
calmram_client/: Cargo.toml
calmram_client/src/: main.rs
calmram_lib/: Cargo.toml
calmram_lib/src/: lib.rs
calmram_server/: Cargo.toml  Config.json  Rocket.toml
calmram_server/src/: main.rs
