[package]
name = "calmram_client"
version = "0.1.0"
edition = "2018"

[dependencies]
calmram_lib = { workspace = true }

iced = { version = "0.13", features = ["image", "advanced"] }
iced_fonts = { version = "0.1", features = ["nerd"] }
websocket = "0.27"
surf = "2.3"
serde_json = "1.0"
serde = "1.0"
