[package]
name = "calmram_server"
version = "0.1.0"
edition = "2018"

[dependencies]
calmram_lib = { workspace = true }

serde = "1.0"
serde_json = "1.0"
rocket = "0.5"
ws = { package = "rocket_ws", version = "0.1" }
sqlx = { version = "0.7.4", features = ["postgres", "time", "rust_decimal"] }

[dependencies.rocket_db_pools]
version = "0.2"
features = ["sqlx_postgres"]
